--- a/css/index.css
+++ b/css/index.css
@@ -26,12 +26,15 @@
 
 */
 
+html {
+  font-size: 62.5%;
+  overflow-x: hidden;
+}
+
 * {
   padding: 0px;
   margin: 0px;
   box-sizing: border-box;
-  font-size: 62.5%;
-  /* overflow-x: hidden; */
 }
 
 *:focus {
