--- a/css/responsive/reponsive.css
+++ b/css/responsive/reponsive.css
@@ -116,24 +116,25 @@
     left: 0;
     width: 100%;
     height: 100vh;
-    align-items: center;
-    justify-content: center;
     background-color: rgba(235, 228, 228, 0.952);
 
     display: flex;
+    align-items: center;
+    justify-content: center;
+
+    transform: translateX(100%);
     opacity: 0;
     pointer-events: none;
     visibility: hidden;
 
-    transition: all 0.5s;
-    transform: translateX(100%);
+    transition: all 0.5s ease-in;
   }
 
-  .icon-mobile-nav[name="close-outline"] {
+  .nav-open .icon-mobile-nav[name="close-outline"] {
     display: block;
   }
 
-  .icon-mobile-nav[name="menu-outline"] {
+  .nav-open .icon-mobile-nav[name="menu-outline"] {
     display: none;
   }
 
@@ -147,6 +148,8 @@
   .main-nav-list {
     flex-direction: column;
     gap: 4.8rem;
+    align-items: center;
+    justify-content: center;
   }
 
   .main-nav-link:link,
@@ -155,5 +158,104 @@
   }
 }
 
-@media (max-width: 50em) {
+@media (max-width: 44em) {
+  .grid--3-cols {
+    grid-template-columns: repeat(2, 1fr);
+  }
+
+  .diets {
+    grid-column: 1 / -1;
+    justify-self: center;
+  }
+
+  .heading-secondary {
+    margin-bottom: 4.8rem;
+  }
+
+  .pricing-plan {
+    width: 100%;
+  }
+
+  .nav-col {
+    grid-row: 1;
+    grid-column: span 2;
+    margin-bottom: 3.2rem;
+  }
+
+  .grid--5-cols {
+    grid-template-columns: repeat(6, 1fr);
+  }
+
+  .logo-col {
+    grid-column: span 3;
+  }
+
+  .address-col {
+    grid-column: span 3;
+  }
+}
+
+@media (max-width: 34em) {
+  .grid {
+    row-gap: 4.8rem;
+  }
+
+  .hero {
+    padding: 0 3.2rem;
+  }
+
+  .section-hero {
+    padding: 2.4rem 0 6.4rem 0;
+  }
+
+  .grid--2-cols,
+  .grid--3-cols,
+  .grid--4-cols {
+    grid-template-columns: 1fr;
+  }
+
+  .btn,
+  .btn:link,
+  .btn:visited {
+    padding: 2.4rem 1.6rem;
+  }
+
+  .logos img {
+    height: 1.6rem;
+  }
+
+  .step-img-box:nth-child(2) {
+    grid-row: 1;
+  }
+
+  .step-img-box:nth-child(6) {
+    grid-row: 5;
+  }
+
+  .step-img-box {
+    transform: translateY(24px);
+  }
+
+  .testimonials {
+    grid-template-columns: 1fr;
+  }
+
+  .gallery {
+    grid-template-columns: repeat(4, 1fr);
+    gap: 1.2rem;
+  }
+
+  .cta {
+    grid-template-columns: 1fr;
+    /* height: 100%; */
+  }
+
+  .cta-img-box {
+    height: 34rem;
+    grid-row: 1;
+  }
+
+  .cta-text-box {
+    padding: 3.2rem;
+  }
 }
